# bazel_rbe_symlink_bug

./: .bazelrc  .gitignore  MODULE.bazel  Package.resolved  Package.swift  README.md
