bazel_dep(name = "rules_apple", version = "3.6.0")
bazel_dep(name = "rules_xcodeproj", version = "2.5.1")
bazel_dep(name = "apple_support", version = "1.15.1")
bazel_dep(name = "rules_swift", version = "2.1.1")
bazel_dep(name = "rules_swift_package_manager", version = "0.35.1")

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swiftpkg_pinoperation",
)
